# SATAn

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  flake.nix  flow.md  mkdocs.yml  overrides.nix  solvers-fs.yml
analysis/: Cargo.toml  overview.ipynb  pyproject.toml
docs/: architecture.md  debugging.md  index.md  runtime.md
ingest/: Cargo.toml
ingest/src/: main.rs
runner/: Cargo.toml  README.md
runner/src/: collector.rs  config.rs  database.rs  distributed.rs  executors.rs  ingest.rs  main.rs  sync.rs
runner/src/database/: batched.rs  clickhouse.rs  delayed.rs  duckdb.rs  sqlite.rs  util.rs
runner/src/distributed/: fs.rs  mpi.rs  util.rs  util_test.rs
runner/src/executors/: distributed.rs  jobs.rs  local.rs  slurm.rs
runner/src/ingest/: exec.rs
runner/src/sync/: coordinator.rs  locking.rs
solvers/: cadical.py  minisat.py
