[package]
name = "satan-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = { version = "4", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
globset = { version = "0.4", features = ["serde1"] }
uuid = { version = "1", features = ["serde"] }
rayon = "1.7.0"
ignore = "0.4.20"
itertools = "0.10.5"
wait-timeout = "0.2.0"
affinity = "0.1.2"
serde_repr = "0.1.12"
duckdb = { version = "0.7.1", features = ["uuid", "bundled"] }
