[package]
name = "satan-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Config, CLI and general structures
clap = { version = "4", features = ["cargo", "derive"] }
duckdb = { version = "0.7.1", optional = true }
serde_repr = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

# ClickHouse storage adapter
clickhouse = { version = "0.11.3", optional = true, features = ["test-util"] }
http = { version = "0.2" }
http-serde = { version = "1.1" }

# SQLite Storage adapter
rusqlite = { version = "0.29.0", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap = "0.10.0"

# For local executor/ concurrent execution
affinity = "0.1.2"
cowstr = { version = "1.0.0-beta1", features = [
	"serde",
], git = "https://git.pipapo.org/cehteh/cowstr.git" }
globset = { version = "0.4", features = ["serde1"] }
ignore = "0.4.20"
itertools = "0.10.5"
rayon = "1.7.0"
wait-timeout = "0.2.0"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }

[features]
bundled-duckdb = ["duckdb/bundled"]
bundled-sqlite = ["rusqlite/bundled"]
rusqlite = ["dep:rusqlite"]
distributed = ["rusqlite"]
duckdb = ["dep:duckdb"]
clickhouse = ["dep:clickhouse"]
clickhouse-lz4 = ["clickhouse/lz4"]
default = ["rusqlite", "distributed", "duckdb"]
